@@ -1,6 +1,9 @@
 shady-KISS-skin History
 -------------------------------------------
 
+2018-04-10:
+- Rearranged separators in displaymenuschedules
+
 2018-03-02:
 - Optimized menutitle in mcMain
 - Show menutitle in mcMain if not VDR
